--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.7",
     "express": "^4.18.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
